syntax = "proto3";

package mono.v1;

option go_package = "github.com/rezkam/mono/api/proto/mono/v1;monov1";

import "google/api/annotations.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "buf/validate/validate.proto";

service MonoService {
  rpc CreateList (CreateListRequest) returns (CreateListResponse) {
    option (google.api.http) = {
      post: "/v1/lists"
      body: "*"
    };
  }
  
  rpc GetList (GetListRequest) returns (GetListResponse) {
    option (google.api.http) = {
      get: "/v1/lists/{id}"
    };
  }

  rpc CreateItem (CreateItemRequest) returns (CreateItemResponse) {
      option (google.api.http) = {
        post: "/v1/lists/{list_id}/items"
        body: "*"
      };
  }

  rpc UpdateItem (UpdateItemRequest) returns (UpdateItemResponse) {
      option (google.api.http) = {
          patch: "/v1/lists/{list_id}/items/{item.id}"
          body: "*"
      };
  }

  rpc ListLists (ListListsRequest) returns (ListListsResponse) {
    option (google.api.http) = {
        get: "/v1/lists"
    };
  }

  // ListTasks retrieves tasks with filtering and sorting support.
  rpc ListTasks (ListTasksRequest) returns (ListTasksResponse) {
    option (google.api.http) = {
        get: "/v1/tasks"
    };
  }

  // Recurring task template management
  rpc CreateRecurringTemplate (CreateRecurringTemplateRequest) returns (CreateRecurringTemplateResponse) {
    option (google.api.http) = {
      post: "/v1/lists/{list_id}/recurring-templates"
      body: "*"
    };
  }

  rpc GetRecurringTemplate (GetRecurringTemplateRequest) returns (GetRecurringTemplateResponse) {
    option (google.api.http) = {
      get: "/v1/recurring-templates/{id}"
    };
  }

  rpc UpdateRecurringTemplate (UpdateRecurringTemplateRequest) returns (UpdateRecurringTemplateResponse) {
    option (google.api.http) = {
      patch: "/v1/recurring-templates/{template.id}"
      body: "*"
    };
  }

  rpc DeleteRecurringTemplate (DeleteRecurringTemplateRequest) returns (DeleteRecurringTemplateResponse) {
    option (google.api.http) = {
      delete: "/v1/recurring-templates/{id}"
    };
  }

  rpc ListRecurringTemplates (ListRecurringTemplatesRequest) returns (ListRecurringTemplatesResponse) {
    option (google.api.http) = {
      get: "/v1/lists/{list_id}/recurring-templates"
    };
  }
}

// TaskStatus represents the current state of a task.
enum TaskStatus {
  TASK_STATUS_UNSPECIFIED = 0;  // Default value, not set
  TASK_STATUS_TODO = 1;          // Ready to start
  TASK_STATUS_IN_PROGRESS = 2;   // Currently being worked on
  TASK_STATUS_BLOCKED = 3;       // Blocked by dependencies
  TASK_STATUS_DONE = 4;          // Completed successfully
  TASK_STATUS_ARCHIVED = 5;      // Archived for records
  TASK_STATUS_CANCELLED = 6;     // Cancelled, won't complete
}

// TaskPriority indicates the importance and urgency of a task.
enum TaskPriority {
  TASK_PRIORITY_UNSPECIFIED = 0;  // Default value, not set
  TASK_PRIORITY_LOW = 1;           // Low priority
  TASK_PRIORITY_MEDIUM = 2;        // Medium priority (recommended default)
  TASK_PRIORITY_HIGH = 3;          // High priority
  TASK_PRIORITY_URGENT = 4;        // Urgent, needs immediate attention
}

// RecurrencePattern defines how often a recurring task should repeat.
enum RecurrencePattern {
  RECURRENCE_PATTERN_UNSPECIFIED = 0;  // Default value, not set
  RECURRENCE_PATTERN_DAILY = 1;         // Every day
  RECURRENCE_PATTERN_WEEKLY = 2;        // Every week
  RECURRENCE_PATTERN_BIWEEKLY = 3;      // Every 2 weeks
  RECURRENCE_PATTERN_MONTHLY = 4;       // Every month
  RECURRENCE_PATTERN_YEARLY = 5;        // Every year
  RECURRENCE_PATTERN_QUARTERLY = 6;     // Every 3 months
  RECURRENCE_PATTERN_WEEKDAYS = 7;      // Monday through Friday
}

message TodoItem {
    string id = 1;
    string title = 2 [(buf.validate.field).string.min_len = 1];
    TaskStatus status = 3;
    TaskPriority priority = 7;
    google.protobuf.Timestamp create_time = 4;
    google.protobuf.Timestamp updated_at = 8;
    google.protobuf.Timestamp due_time = 5;
    repeated string tags = 6;
    google.protobuf.Duration estimated_duration = 9;
    google.protobuf.Duration actual_duration = 10;

    // Recurring task metadata
    string recurring_template_id = 11;  // ID of the template this task was generated from (empty if not recurring)
    google.protobuf.Timestamp instance_date = 12;  // Anchor date for this recurring instance

    // Timezone for due_time interpretation
    // Empty/null = floating time (9am stays 9am in user's current timezone)
    // Non-empty = fixed timezone (absolute moment in specified IANA timezone like 'Europe/Stockholm')
    string timezone = 13;
}

message TodoList {
    string id = 1;
    string title = 2 [(buf.validate.field).string.min_len = 1];
    repeated TodoItem items = 3;
    google.protobuf.Timestamp create_time = 4;
    
    // Item count statistics (populated when listing, empty when getting single list)
    int32 total_items = 5;        // Total items in this list
    int32 undone_items = 6;       // Items with status TODO, IN_PROGRESS, or BLOCKED
}

message CreateListRequest {
    string title = 1 [(buf.validate.field).string.min_len = 1];
}

message CreateListResponse {
    TodoList list = 1;
}

message GetListRequest {
    string id = 1 [(buf.validate.field).string.min_len = 1];
}

message GetListResponse {
    TodoList list = 1;
}

message CreateItemRequest {
    string list_id = 1 [(buf.validate.field).string.min_len = 1];
    string title = 2 [(buf.validate.field).string.min_len = 1];
    google.protobuf.Timestamp due_time = 3;
    repeated string tags = 4;
    TaskPriority priority = 5;
    google.protobuf.Duration estimated_duration = 6;
    string recurring_template_id = 7;  // Optional: ID of the template this task is generated from
    google.protobuf.Timestamp instance_date = 8;  // Optional: Anchor date for this recurring instance
    string timezone = 9;  // Optional: IANA timezone (e.g., 'Europe/Stockholm'). Empty = floating time
}

message CreateItemResponse {
    TodoItem item = 1;
}

message UpdateItemRequest {
    string list_id = 1 [(buf.validate.field).string.min_len = 1];
    TodoItem item = 2 [(buf.validate.field).required = true];
    google.protobuf.FieldMask update_mask = 3;
}

message UpdateItemResponse {
    TodoItem item = 1;
}

message ListListsRequest {}

message ListListsResponse {
    repeated TodoList lists = 1;
}

message ListTasksRequest {
  // Optional: Parent list to filter by. If empty, search globally.
  string parent = 1;
  int32 page_size = 2;
  string page_token = 3;
  // AIP-160 filtering (e.g. "manual filter").
  string filter = 4;
  // AIP-132 sorting (e.g. "create_time desc").
  string order_by = 5;
}

message ListTasksResponse {
  repeated TodoItem items = 1;
  string next_page_token = 2;
}

message RecurringTaskTemplate {
  string id = 1;
  string list_id = 2;
  string title = 3 [(buf.validate.field).string.min_len = 1];
  repeated string tags = 4;
  TaskPriority priority = 5;
  google.protobuf.Duration estimated_duration = 6;
  RecurrencePattern recurrence_pattern = 7;
  string recurrence_config = 8; // JSON config for pattern-specific settings
  google.protobuf.Duration due_offset = 9;
  bool is_active = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
  google.protobuf.Timestamp last_generated_until = 13;
  int32 generation_window_days = 14;
}

message CreateRecurringTemplateRequest {
  string list_id = 1 [(buf.validate.field).string.min_len = 1];
  string title = 2 [(buf.validate.field).string.min_len = 1];
  repeated string tags = 3;
  TaskPriority priority = 4;
  google.protobuf.Duration estimated_duration = 5;
  RecurrencePattern recurrence_pattern = 6;
  string recurrence_config = 7; // JSON config
  google.protobuf.Duration due_offset = 8;
  int32 generation_window_days = 9; // Default 30 days
}

message CreateRecurringTemplateResponse {
  RecurringTaskTemplate template = 1;
}

message GetRecurringTemplateRequest {
  string id = 1 [(buf.validate.field).string.min_len = 1];
}

message GetRecurringTemplateResponse {
  RecurringTaskTemplate template = 1;
}

message UpdateRecurringTemplateRequest {
  RecurringTaskTemplate template = 1 [(buf.validate.field).required = true];
  google.protobuf.FieldMask update_mask = 2;
}

message UpdateRecurringTemplateResponse {
  RecurringTaskTemplate template = 1;
}

message DeleteRecurringTemplateRequest {
  string id = 1 [(buf.validate.field).string.min_len = 1];
}

message DeleteRecurringTemplateResponse {}

message ListRecurringTemplatesRequest {
  string list_id = 1 [(buf.validate.field).string.min_len = 1];
  bool active_only = 2; // Filter for active templates
}

message ListRecurringTemplatesResponse {
  repeated RecurringTaskTemplate templates = 1;
}
